# rope

./: CMakeLists.txt
include/: rope
src/: node.cpp  rope.cpp
tests/: CMakeLists.txt  test.cpp
